--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-element-dropdown": "^1.6.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.6",
